<resources>
    <string name="app_name">Movie</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="share">Share</string>

    <string name="action_refresh">Refresh</string>
    <string name="API_KEY">1703be74c210e3f082b5cd925d398ee4</string>
    <string name="title_activity_detail">Movie Details</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <string name="release_date">Release Date</string>
    <string name="rating">Rating</string>
    <string name="trailers">Trailers</string>
    <string name="genre">Genre</string>
    <string name="synopsis">Synopsis</string>
    <string name="reviews">User Reviews</string>
    <string name="runtime">Runtime</string>

    <string name="favorites">Favorites</string>

    <string name="pref_movie_key">movies_preferences</string>
    <string name="pref_movie_title">Sort the Movies</string>

    <string-array name="pref_movies_entry">
        <item>By Popularity</item>
        <item>By Highest Rated</item>
    </string-array>

    <string-array name="pref_movies_entryvalues">
        <item>popularity.desc</item>
        <item>vote_average.desc</item>
    </string-array>

    <string name="pref_sort_default_value">popularity.desc</string>

    <string name="movie_detail_open_trailer_button_text">Start trailer #%s</string>

</resources>
