<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.movie.DetailActivity$DetailFragment">

    <LinearLayout
        android:id="@+id/linear_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/movie_title"
            style="@style/CustomText"
            android:layout_width="match_parent"
            android:layout_height="@dimen/text_height"
            android:paddingLeft="@dimen/padding_left"
            android:paddingTop="@dimen/padding_top"
            android:textColor="@android:color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/movie_poster"
                android:layout_width="@dimen/image_width"
                android:layout_height="@dimen/image_height"
                android:layout_marginLeft="@dimen/margin_left" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    style="@style/Text"
                    android:layout_width="@dimen/column_width"
                    android:layout_height="@dimen/column_height"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/margin_top"
                    android:paddingLeft="@dimen/padding_left"
                    android:paddingRight="@dimen/padding_right"
                    android:paddingTop="@dimen/top"
                    android:text="@string/release_date"
                    android:textColor="@android:color/white" />

                <TextView
                    android:id="@+id/movie_release_date"
                    style="@style/DateText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/top" />

                <TextView
                    style="@style/Text"
                    android:layout_width="@dimen/column_width"
                    android:layout_height="@dimen/column_height"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/margin_top"
                    android:paddingLeft="@dimen/padding_left"
                    android:paddingRight="@dimen/padding_right"
                    android:paddingTop="@dimen/top"
                    android:text="@string/rating"
                    android:textColor="@android:color/white" />

                <RatingBar
                    android:id="@+id/rating_bar"
                    style="?android:attr/ratingBarStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/top"
                    android:isIndicator="true"
                    android:numStars="10" />

                <TextView
                    android:id="@+id/movie_rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center" />

            </LinearLayout>
        </LinearLayout>

        <View
            android:id="@+id/SplitLine_hor1"
            android:layout_width="match_parent"
            android:layout_height="@dimen/split_line_height"
            android:background="@color/gray" />

        <TextView
            style="@style/Texts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_left"
            android:layout_marginTop="@dimen/margin_top"
            android:text="@string/genre" />

        <TextView
            android:id="@+id/genres"
            style="@style/GenreText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_left"
            android:layout_marginTop="@dimen/top" />

        <TextView
            style="@style/Texts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_left"
            android:layout_marginTop="@dimen/margin_top"
            android:text="@string/runtime" />

        <TextView
            android:id="@+id/runtime"
            style="@style/GenreText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_left"
            android:layout_marginTop="@dimen/top" />

        <TextView
            style="@style/Texts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_left"
            android:layout_marginTop="@dimen/margin_top"
            android:text="@string/synopsis" />

        <TextView
            android:id="@+id/movie_synopsis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_bottom"
            android:layout_marginLeft="@dimen/margin_left"
            android:layout_marginRight="@dimen/margin_right"
            android:layout_marginTop="@dimen/top" />

        <View
            android:id="@+id/SplitLine_hor2"
            android:layout_width="match_parent"
            android:layout_height="@dimen/split_line_height"
            android:background="@color/gray" />

        <TextView
            android:id="@+id/user_reviews"
            style="@style/Texts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|center_horizontal"
            android:layout_marginLeft="@dimen/margin_left"
            android:layout_marginTop="@dimen/margin_top"
            android:text="@string/reviews" />

        <TextView
            android:id="@+id/review"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/top"
            android:layout_marginLeft="@dimen/margin_left"
            android:layout_marginRight="@dimen/margin_right"
            android:layout_marginTop="@dimen/margin_top" />

        <View
            android:id="@+id/SplitLine_hor3"
            android:layout_width="match_parent"
            android:layout_height="@dimen/split_line_height"
            android:background="@color/gray" />

        <TextView
            android:id="@+id/trailer"
            style="@style/Texts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/margin_bottom"
            android:layout_marginLeft="@dimen/margin_left"
            android:layout_marginTop="@dimen/margin_top"
            android:text="@string/trailers" />

        <LinearLayout
            android:id="@+id/movie_detail_videos_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageButton
                    android:id="@+id/imgbtn_favorite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="@dimen/margin_top"
                    android:layout_marginRight="@dimen/margin_right"
                    android:layout_marginBottom="@dimen/margin_bottom"
                    android:contentDescription="@string/favorites"/>


            </RelativeLayout>
    </LinearLayout>
</ScrollView>